[package]
name = "erhannis_misc"
version = "0.1.5"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Erhannis's collection of misc utils"
repository = "https://github.com/Erhannis/rs_erhannis_misc"
readme = "README.md"
keywords = ["utilities", "utils", "misc"]

[features]
default = ["std"]
std = ["crossbeam/std", "crossbeam/alloc", "crossbeam-channel/std"]

[dependencies]
crossbeam = { version = "0.8.4", default-features = false, features = ["crossbeam-channel"] }
crossbeam-channel = { version = "0.5.15", default-features = false }
fugit = { version = "0.3.9", features = ["defmt"] }
log = "0.4.29"
defmt = "1.0.1"
sha2 = { version = "0.10.9", default-features = false }
heapless = "0.9.2"
nb = "1.1.0"
